# test

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: Bumpversion.yml  ci.yml
src/: add.py
tests/: test_add.py
