[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=2.15.10",
    "black>=22.12.0",
    "commitizen>=2.39.1",
    "pre-commit>=2.21.0",
    "pytest>=7.2.0",
    "allure-pytest>=2.12.0",
]

[tool.pylint."messages control"]
disable = ["missing-module-docstring"]
[tool.pylint.'MASTER']
ignore-patterns = ["^test.+"]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "MIT"}
